2005-11-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el (haskell-indent-next-symbol): Simplify.
	(haskell-indent-comment): Rename from haskell-indent-inside-comment.
	(haskell-indent-skip-lexeme-forward)
	(haskell-indent-offset-after-info, haskell-indent-hanging-p): New funs.
	(haskell-indent-inhibit-after-offset, haskell-indent-dont-hang):
	New variables.
	(haskell-indent-closing-keyword, haskell-indent-after-keyword-column)
	(haskell-indent-inside-paren): New functions, extracted
	from haskell-indent-indentation-info.  Use the above new functions.
	(haskell-indent-indentation-info): Use them.
	(haskell-indent-after-keywords): Add data for ( and {.

	* haskell-font-lock.el (haskell-font-lock-keywords-create): `as' is not
	a reserved keyword, apparently, and is used as var name.

2005-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-*.el (turn-(on|off)-*): Make non-interactive.

	* haskell-decl-scan.el (haskell-decl-scan-mode): New minor mode.
	(turn-on-haskell-decl-scan): Use it.

	* haskell-doc.el (haskell-doc-extract-types): Get labelled data working.
	(haskell-doc-prelude-types): Update via auto-generation.

	* haskell-doc.el (haskell-doc-extract-types): Get it partly working.
	(haskell-doc-fetch-lib-urls): Don't use a literal if we apply
	`nreverse' on it later on.
	(haskell-doc-prelude-types): Update some parts by auto-generation.
	(haskell-doc-grab, haskell-doc-string-nub-ws): Simplify.

	* haskell-doc.el (haskell-doc-maintainer, haskell-doc-varlist)
	(haskell-doc-submit-bug-report, haskell-doc-ftp-site)
	(haskell-doc-visit-home): Remove.
	(haskell-doc-reserved-ids, haskell-doc-fetch-lib-urls)
	(haskell-doc-extract-and-insert-types): New funs.
	(haskell-doc-reserved-ids): Fix type of `map'.

2005-11-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-load-file): Fix the
	compilation-parsing-end fiddling so it doesn't get moved inadvertently.
